--- a/app/_assets/scss/_header.scss
+++ b/app/_assets/scss/_header.scss
@@ -14,6 +14,19 @@
 	z-index: 2;
 	transform: translate3d(0,0,0);
 	transition: transform 800ms cubic-bezier(.19,1,.22,1);
+
+	&::after {
+		content: "";
+		display: block;
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 120%;
+		background: $blue;
+	}
+
 }
 
 .close {
@@ -37,19 +50,24 @@
 }
 
 header {
-	position: absolute;
+	position: fixed;
 	height: 100%;
 	width: 100vw;
+	top: 0;
 	right: 100%;
 	padding: 50px $gutter-s;
 	background: $blue;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 	color: white;
 	z-index: 1;
 	transform: translate3d(0,0,0);
 	transition: transform 800ms cubic-bezier(.19,1,.22,1);
+
+	.wrapper {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
 
 	.header_title,
 	.header_nav,
